// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as infinite progress 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
        "height": 6,
      },
      Object {
        "backgroundColor": "#e5e5ea",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="root"
>
  <View
    style={
      Object {
        "backgroundColor": "#007aff",
        "height": "100%",
        "transform": Array [
          Object {
            "translateX": -100,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render normally 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 3,
        "height": 6,
      },
      Object {
        "backgroundColor": "#e5e5ea",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="root"
>
  <View
    style={
      Object {
        "backgroundColor": "#007aff",
        "height": "100%",
        "transform": Array [
          Object {
            "translateX": -32.5,
          },
          Object {
            "scaleX": 0.35,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`should render with custom props 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 0,
        "height": 10,
      },
      Object {
        "backgroundColor": "#e5e5ea",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
  testID="root"
>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "height": "100%",
        "transform": Array [
          Object {
            "translateX": -0,
          },
          Object {
            "scaleX": 0.35,
          },
        ],
        "width": "100%",
      }
    }
  />
</View>
`;
